--- a/RADIO SITE/index.html
+++ b/RADIO SITE/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>Välkommen till SVERIGES RADIO!</h1>
-        <h3>För att få mer info kring alla våra kanaler är det bara att klicka på dom ^^ <br>För att söka fram en specifik kanal, använd "ctrl"+"f" på ditt</h3>
+        <h3>För att få mer info kring alla våra kanaler är det bara att klicka på dom ^^ <br>För att söka fram en specifik kanal, använd "ctrl"+"f" på ditt tangentbord</h3>
     </header>
     <div class="container"></div>
     
